--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,20 @@
-root = true
+# 为每一个支持.editorconfig的编辑器配置缩进
 
+# 表示是最顶层的配置文件，发现设为true时，才会停止查找.editorconfig文件
+root = true
+　　　
 [*]
-charset = utf-8
-indent_style = space
+# 设置缩进风格(tab是硬缩进，space为软缩进)
+indent_style = tab
+# 用一个整数定义的列数来设置缩进的宽度，如果indent_style为tab，tab_width没有设置，则此属性默认为tab_width
 indent_size = 2
+# 用一个整数来设置tab缩进的列数。默认是indent_size
+# tab_width = 4
+# 设置换行符，值为lf、cr和crlf
 end_of_line = lf
-insert_final_newline = true
+# 设置编码，值为latin1、utf-8、utf-8-bom、utf-16be和utf-16le，不建议使用utf-8-bom
+charset = utf-8
+# 设为true表示会去除换行行首的任意空白字符
 trim_trailing_whitespace = true
+#  设为true表示使文件以一个空白行结尾
+insert_final_newline = true
